--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
+        <artifactId>spring-boot-dependencies</artifactId>
         <version>2.2.2.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>io.markshen</groupId>
     <artifactId>mybatis-plus-learn</artifactId>
@@ -22,6 +21,7 @@
     <properties>
         <java.version>1.8</java.version>
         <lombok.version>1.18.8</lombok.version>
+        <mybatis-plus.version>3.3.0</mybatis-plus.version>
     </properties>
 
     <dependencyManagement>
@@ -32,7 +32,11 @@
                 <version>${lombok.version}</version>
             </dependency>
 
-
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
