--- a/mybatis-plus-quickstart/src/main/resources/application.yml
+++ b/mybatis-plus-quickstart/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
 mybatis-plus:
   config-location: classpath:mybatis/mybatis-config.xml
   mapper-locations: classpath:mybatis/mapper/*Mapper.xml
+# 全局主键策略
+  global-config:
+    db-config:
+      id-type: auto
 
 # 日志
 logging:
