--- a/mybatis-plus-advanced/pom.xml
+++ b/mybatis-plus-advanced/pom.xml
@@ -33,6 +33,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>p6spy</groupId>
+			<artifactId>p6spy</artifactId>
+			<version>3.8.7</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
