--- a/mybatis-plus-quickstart/src/main/resources/application.yml
+++ b/mybatis-plus-quickstart/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 mybatis-plus:
   config-location: classpath:mybatis/mybatis-config.xml
   mapper-locations: classpath:mybatis/mapper/*Mapper.xml
-# 全局主键策略
+  # 全局主键策略
   global-config:
     db-config:
       id-type: auto
@@ -22,3 +22,13 @@ logging:
     io.markshen.dao: trace
   pattern:
     console: '%p%m%n'
+
+# 暴露其他监控信息
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+server:
+  port: 8080
